# entropy-derby

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  test_race_timelock.cpp
docs/: deployment.md  math.md  protocol.md  spec.md
include/: betting.hpp  collaborative_rng.hpp  deterministic_math.hpp  entropy_protocol.hpp  fixed_point.hpp  horse.hpp  oracle.hpp  parimutuel.hpp  race.hpp  race_timelock.hpp  rng.hpp  secure_memory.hpp  secure_random.hpp  threshold_bls_rng.hpp  timelock_encryption.hpp  transcript_log.hpp  vdf.hpp
server/: README.md
src/: betting.cpp  collaborative_rng.cpp  deterministic_math.cpp  horse.cpp  main.cpp  parimutuel.cpp  race.cpp  race_timelock.cpp  rng.cpp  secure_random.cpp  threshold_bls_rng.cpp  timelock_encryption.cpp  transcript_log.cpp  vdf.cpp
tests/: README.md  determinism.cpp  test_race_timelock.cpp
tools/: analyze_config.cpp  audit_race.cpp  bench_vdf.cpp  generate_seeds.cpp  publish_log.cpp
web/frontend/: README.md
web/verifier/: index.html
zk/: README.md  audit_field_encoder.js
zk/circom/: mini_race.circom
zk/inputs/: example.json
